--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "cutplanner",
   "version": "0.1.0",
-  "description": "A cutting optimization and planning application for efficient material usage",
-  "main": "src/index.ts",
+  "type": "module",
+  "description": "A Vue.js cutting optimization and planning application for efficient material usage",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.{ts,tsx}",
-    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
-    "format": "prettier --write src/**/*.{ts,tsx,json,md}"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "lint": "eslint . --ext vue,js,jsx,cjs,mjs,ts,tsx,cts,mts --fix --ignore-path .gitignore",
+    "type-check": "vue-tsc --noEmit"
   },
   "keywords": [
     "cutting",
@@ -19,21 +19,35 @@
     "planning",
     "manufacturing",
     "woodworking",
-    "waste-reduction"
+    "waste-reduction",
+    "vue",
+    "vite",
+    "typescript"
   ],
   "author": "LunaDeerTech",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "jest": "^29.0.0",
-    "prettier": "^3.0.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+  "dependencies": {
+    "vue": "^3.4.38",
+    "pinia": "^2.2.2",
+    "vue-router": "^4.4.5"
   },
-  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^20.16.5",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.13",
+    "typescript": "~5.5.4",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.1",
+    "vue-tsc": "^2.1.6"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
