--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "lint:css": "stylelint \"src/**/*.{css,scss,vue}\" --allow-empty-input",
     "test:ui": "vitest --ui",
     "lint": "eslint . --ext vue,js,jsx,cjs,mjs,ts,tsx,cts,mts --fix --ignore-path .gitignore",
     "type-check": "vue-tsc --noEmit"
@@ -27,22 +28,26 @@
   "author": "LunaDeerTech",
   "license": "MIT",
   "dependencies": {
-    "vue": "^3.4.38",
     "pinia": "^2.2.2",
+    "postcss-html": "^1.8.0",
+    "vue": "^3.4.38",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-plugin-vue": "^9.28.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.13",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^32.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.4",
     "vite": "^5.4.8",
     "vitest": "^2.1.1",
