--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "pinia": "^2.2.2",
     "postcss-html": "^1.8.0",
     "vue": "^3.4.38",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^20.16.5",
+    "@types/node": "^20.19.14",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
